Version 10.2 - xx edition. 14 May 2022

Allow .Z80 corrupted snapshot loading from ZXSP emulator with additional header of 31 byte size
Added ZSF support for Timex TS2068

Fixed .Z80 Timex TS2068 snapshot loading
Fixed showing Recent Files when file name contains character %
Fixed DataDrive HiLow emulation



Version 10.1 - Carrier Command edition. 06 May 2022

Added real joystick support on Mac
Added joystick support for Hat controllers
Added new joystick event to exit ZEsarUX
Added action to trigger left-right movement on joystick, to play Decathlon-like games
Added MSX Joystick emulation
Added Spectravideo Joystick emulation
Added support for simple speaker output on Raspberry PI Using GPIO pins and no sound card
Added setting to select a different joystick on Windows and OS with SDL driver
Added setting to change ULA Data bus value
Added showing microdrive label when expanding qlay mdv files of size 174930 bytes
Added Jupiter Ace TAP & TZX support on tape browser
Added TZX support for ID 33 - Hardware type
Added Autorewind tape setting
Added Z80 Halt signal state support on zsf snapshot
Added device button for ZX-Uno Flash device
Added another easter egg ;)


Improved Text Adventure Debugging:
-Added Text Adventure Map
-Added Locations Connections list
-Added direct menu entry and f-function/button to view 8 (adventure debug)
-Improved detection of some paws adventures (like superlopez and abracadabra)
-Improved detection of some daad adventures (like jabato)

Improved Debug CPU: 
-Now it highlights which registers will be modified by the opcode at the cursor position
-New address breakpoint expression FPEEK, that can read contents in the range of the total machine address space
-Added t-states counter on default view
-Allow to have a decimal view of opcode decoding using key m (mode)
-Added breakpoints actions to start and stop cpu transaction log

Improved Accessibility: 
-Added direct settings for inverse colours and gray mode
-Added setting to disable Flash